[package]
name = "camctrl"
version = "0.2.0"
edition = "2021"
description = "Camera control math"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chubei-oppen/camctrl/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbt3 = "0"
glam = "0"
